<resources>
    <string name="app_name">MyMeds</string>
    <string name="ver_rem_dios">Ver remédios</string>
    <string name="ver_rem_dios2">Ver Remédios</string>
    <string name="configura_es">Configurações</string>
    <string name="comprimidos">Comprimidos</string>
    <string name="_10">10</string>
    <string name="_104">10</string>
    <string name="axonium">Axonium:</string>
    <string name="deller">Deller:</string>
    <string name="wellbutrin">Wellbutrin:</string>
    <string name="comprimidos2">"  Comprimidos"</string>
    <string name="something">something</string>
    <string name="something2" />
    <string name="something22">something2</string>
    <string name="something31" />
    <string name="something33">something3</string>
    <string name="comprimidos312">"  Comprimidos"</string>
    <string name="_102">10</string>
    <string name="comprimidos12342">"  Comprimidos"</string>
    <string name="comprimidos149">"  Comprimidos"</string>
    <string name="comprimidos1231">Comprimidos</string>
    <string name="comprimidos321">Comprimidos</string>
    <string name="comprimidos257">Comprimidos</string>
    <string name="configura_es00">Configurações</string>
    <string name="configura_es52">Configurações</string>
    <string name="comprimidos_di_rios">Comprimidos diários:</string>
    <string name="n_de_rem_dios">nº de Remédios</string>
    <string name="rem_dio1">Remédio1</string>
    <string name="rem_dio_12">Remédio 1</string>
    <string name="dose_di_ria">Dose Diária:</string>
    <string name="dose_di_ria2589">Dose Diária:</string>
    <string name="rem_dio_2">Remédio 2</string>
    <string name="comprimidos_p_dia">Comprimidos P/Dia</string>
    <string name="comprimidos_p_dia54">Comprimidos P/Dia</string>
    <string name="name">Name</string>
    <string name="atualizar_n">Atualizar nº:</string>
    <string name="atualizar_n2">Atualizar nº</string>
    <string name="textview">TextView</string>
    <string name="novo_n">Novo nº</string>
    <string name="novo_n2">Novo nº</string>
    <string name="rem_dio_3">Remédio 3</string>
    <string name="novo_n3">Novo nº</string>
    <string name="dose_di_ria4">Dose Diária:</string>
    <string name="comprimidos_p_dia4">Comprimidos P/Dia</string>
    <string name="comprimidos_p_dia42">Comprimidos P/Dia</string>
    <string name="atualizar_n33">Atualizar nº:</string>
    <string name="novo_n24">Novo nº</string>
    <string name="novo_n58">Novo nº</string>
    <string name="comprimidos_p_dia69">Comprimidos P/DIa</string>
    <string name="comprimido_p_dia">Comprimido P/Dia</string>
    <string name="novo_n528">Novo nº</string>
    <string name="editar_nomes_de_rem_dios2">Editar Nomes de Remédios</string>
    <string name="nome_rem_dio_1">Nome Remédio 1</string>
    <string name="configura_es_de_nomes">Configurações de Nomes</string>
    <string name="nomear_rem_dio_1">Nomear Remédio 1</string>
    <string name="configura_es2">Configurações</string>
    <string name="rem_dio_1">Remédio 1</string>
    <string name="dose_di_ria248">Dose Diária:</string>
    <string name="comprimidos_p_dia256">Comprimidos P/Dia</string>
    <string name="novo_n11">Novo Nº</string>
    <string name="atualizar_n22">Atualizar Nº:</string>
    <string name="rem_dio_236">Remédio 2</string>
    <string name="dose_di_ria88">Dose Diária:</string>
    <string name="comprimidos_p_dia225">Comprimidos P/Dia</string>
    <string name="atualizar_n556">Atualizar Nº:</string>
    <string name="novo_n2114">Novo Nº</string>
    <string name="mudar_nomes">Mudar Nomes</string>
    <string name="rem_dio_157">Remédio 1</string>
    <string name="renomear_rem_dio_1">Renomear Remédio 1</string>
    <string name="mudar_nomes99">Mudar Nomes</string>
    <string name="rem_dio_233">Remédio 2:</string>
    <string name="rem_dio_222">Remédio 2:</string>
    <string name="renomear_rem_dio_2556">Renomear Remédio 2</string>
    <string name="rem_dio_1224">Remédio 1:</string>
    <string name="comprimidos_p_dia112">Comprimidos P/Dia</string>
    <string name="novo_n221">Novo Nº</string>
    <string name="comprimidos_p_dia11123">Comprimidos P/Dia</string>
    <string name="renomear_rem_dio_1332">Renomear Remédio 1</string>
    <string name="renomear_rem_dio_2331">Renomear Remédio 2</string>
    <string name="novo_n332">Novo Nº</string>
    <string name="atualizar2">Atualizar</string>
</resources>