<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <TableLayout
        android:id="@+id/caixa1"
        android:layout_width="313dp"
        android:layout_height="101dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="97dp">

        <TableRow
            android:layout_width="66dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewPrimeiroRemedio"
                android:layout_width="94dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/axonium"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/_10"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/comprimidos257"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSegundoRemedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/deller"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_102"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/comprimidos321"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </TableLayout>
</RelativeLayout>